Fixed: flickering / weird loading on page load

--- a/resources/assets/styles/_global.scss
+++ b/resources/assets/styles/_global.scss
@@ -138,3 +138,9 @@ $transition: 0.8s cubic-bezier(0.2, 1, 0.3, 1);
   @include button;
   margin-top: 30px;
 }
+
+body:not(.home) {
+  .content {
+    padding-top: 0 !important;
+  }
+}
